feat: 框架初始化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,10 +39,11 @@
     "./build",
     "./packages/**/*.ts",
     "./packages/**/*.vue"
-     ],
+, "packages/index.ts"     ],
   "compileOnSave": true,
   "exclude": [
     "node_modules/*",
-    "dist"
+    "dist",
+    "lib"
   ]
 }
