--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "电商组件库",
-  "main": "lib/index.js",
+  "main": "lib/cq-shop-components.js",
   "source": "packages/index.ts",
   "typings": "types/index.d.ts",
   "files": [
@@ -36,7 +36,10 @@
     "build:weapp": "taro build --type weapp",
     "build:h5": "taro build --type h5",
     "dev:h5": "npm run build:h5 -- --watch",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --config ./build/webpack.config.prod.js",
+    "components": "webpack --config ./build/webpack.config.component.js",
+    "build:all": "rimraf lib && npm run build && npm run components"
   },
   "browserslist": [
     "last 3 versions",
@@ -67,13 +70,17 @@
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-preset-taro": "3.6.35",
-    "eslint": "^8.12.0",
+    "css-loader": "^7.1.2",
+    "eslint": "7.32.0",
     "eslint-config-taro": "3.6.35",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^8.0.0",
+    "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.1.0",
-    "vue-loader": "^17.1.0",
-    "webpack": "5.78.0"
+    "typescript": "^5.3.3",
+    "vue-loader": "^17.4.2",
+    "webpack": "5.78.0",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": ">=18.20.4"
