--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "typescript": "^5.3.3",
     "vue-loader": "^17.4.2",
     "webpack": "5.78.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   },
   "engines": {
