feat: ts类型校验文件优化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "noUnusedParameters": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "declaration": false, // 默认不要声明文件 
-    "emitDeclarationOnly": false, // 如果为 true，则只生成声明文件
+    "declaration": true, // 默认不要声明文件 
+    // "emitDeclarationOnly": true, // 如果为 true，则只生成声明文件
+    "outDir": "./types",  // 输出目录
     "baseUrl": "./",
     "jsx": "preserve",
     "allowJs": true,
