--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "电商组件库",
   "main": "lib/cq-shop-components.js",
   "source": "packages/cq-shop-components/index.ts",
-  "typings": "types/index.d.ts",
+  "typings": "lib/types/index.d.ts",
   "files": [
     "dist",
     "lib",
@@ -40,8 +40,9 @@
     "build": "webpack --config ./build/webpack.config.prod.js",
     "components": "webpack --config ./build/webpack.config.component.js",
     "build:all": "rimraf lib && npm run build && npm run components",
-    "build:types": "node ./build/build-types.ts",
-    "generate-types": "webpack --config ./build/webpack.config.base.js"
+    "generate-types": "webpack --config ./build/webpack.config.base.js",
+    "typecheck": "vue-tsc --noEmit",
+    "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir types"
   },
   "browserslist": [
     "last 3 versions",
@@ -84,6 +85,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.3",
     "vue-loader": "^17.4.2",
+    "vue-tsc": "^2.1.8",
     "webpack": "5.78.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
