--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.21.5",
     "@tarojs/cli": "3.6.35",
     "@tarojs/helper": "3.6.35",
@@ -80,11 +82,15 @@
     "eslint-config-taro": "3.6.35",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^8.0.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "postcss-loader": "^8.1.1",
+    "sass-loader": "^16.0.2",
     "ts-loader": "^9.5.1",
     "ts-morph": "^24.0.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.3",
     "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3",
     "vue-tsc": "^2.1.8",
     "webpack": "5.78.0",
     "webpack-bundle-analyzer": "^4.10.2",
