--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "description": "电商组件库",
-  "main": "lib/cq-shop-components.js",
+  "main": "dist/lib/cq-shop-components.js",
   "source": "packages/cq-shop-components/index.ts",
-  "typings": "lib/types/index.d.ts",
+  "typings": "dist/lib/types/index.d.ts",
   "files": [
-    "dist",
-    "lib",
-    "types"
+    "dist"
   ],
   "author": "yinxia",
   "homepage": "",
@@ -20,7 +18,7 @@
   "publishConfig": {
     "registry": "http://registry-cnpm.xxxx.com/"
   },
-  "license": "ISC",
+  "license": "MIT",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -39,10 +37,9 @@
     "test": "jest",
     "build": "webpack --config ./build/webpack.config.prod.js",
     "components": "webpack --config ./build/webpack.config.component.js",
-    "build:all": "rimraf lib && npm run build && npm run components",
-    "generate-types": "webpack --config ./build/webpack.config.base.js",
+    "build:all": "rimraf dist && npm run build && npm run components && npm run build:types",
     "typecheck": "vue-tsc --noEmit",
-    "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir types"
+    "build:types": "node ./build/generateTypesDefinitions.js"
   },
   "browserslist": [
     "last 3 versions",
@@ -56,6 +53,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.21.5",
