--- a/package.json
+++ b/package.json
@@ -82,8 +82,11 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^8.0.0",
     "mini-css-extract-plugin": "^2.9.1",
+    "postcss-custom-properties": "^14.0.3",
+    "postcss-discard-duplicates": "^7.0.1",
     "postcss-loader": "^8.1.1",
     "sass-loader": "^16.0.2",
+    "sass-resources-loader": "^2.2.5",
     "ts-loader": "^9.5.1",
     "ts-morph": "^24.0.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
