feat: 增加配置文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "examples/",
     "packages/**/*.ts",
     "packages/**/*.vue",
-    "types/*.ts"
+    "global.d.ts"
     ],
   "compileOnSave": true,
   "exclude": [
