--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/parser": "^6.2.0",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-preset-taro": "3.6.35",
     "chalk": "4.1.2",
     "consola": "^3.2.3",
@@ -84,13 +85,15 @@
     "eslint-plugin-vue": "^8.0.0",
     "mini-css-extract-plugin": "^2.9.1",
     "postcss-discard-duplicates": "^7.0.1",
+    "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
+    "postcss-url": "^10.1.3",
     "sass-loader": "^16.0.2",
     "sass-resources-loader": "^2.2.5",
     "ts-loader": "^9.5.1",
     "ts-morph": "^24.0.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
     "vue-tsc": "^2.1.8",
